début workingProfile liste + create ++ qq retouches CSS

--- a/src/app/Modules/professor/Components/test-result/create-result/create-result.component.html
+++ b/src/app/Modules/professor/Components/test-result/create-result/create-result.component.html
@@ -1,4 +1,4 @@
-<H2 mat-dialog-title>Modifier le résultat</H2>
+<H2 mat-dialog-title>Créer le résultat</H2>
 <mat-dialog-content>
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form">
