--- a/src/app/Modules/professor/Components/works/create-work/create-work.component.html
+++ b/src/app/Modules/professor/Components/works/create-work/create-work.component.html
@@ -1,1 +1,126 @@
-<p>create-work works!</p>
+<H2 mat-dialog-title>Créer une question</H2>
+<mat-dialog-content>
+
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form">
+        <mat-error *ngIf="error == true">
+            {{this.errorTxt}}
+        </mat-error>
+
+        
+        <mat-form-field>
+            <mat-label>Selectionnez une categorie</mat-label>
+            <mat-select formControlName="categoryId">
+                <mat-option [value]="cat.id" *ngFor="let cat of categories">{{cat.name}}</mat-option>
+            </mat-select>
+            <mat-error>
+                La sélection de la catégorie est obligatoire.
+            </mat-error>
+        </mat-form-field>
+        <br/>
+        <mat-divider></mat-divider>
+
+        <mat-form-field>
+            <mat-label>Selectionnez une année scolaire</mat-label>
+            <mat-select formControlName="schoolYear">
+                <mat-option [value]="year" *ngFor="let year of schoolYears">{{year}}</mat-option>
+            </mat-select>
+            <mat-error>
+                La sélection de l'année scolaire est obligatoire.
+            </mat-error>
+        </mat-form-field>
+        <br/>
+        <mat-divider></mat-divider>
+
+        <mat-form-field>
+            <mat-label>Selectionnez un trimestre</mat-label>
+            <mat-select formControlName="trimester">
+                <mat-option [value]="trimester" *ngFor="let trimester of trimesters">{{trimester}}</mat-option>
+            </mat-select>
+            <mat-error>
+                La sélection du trimestre est obligatoire.
+            </mat-error>
+        </mat-form-field>
+        <br/>
+        <mat-divider></mat-divider>
+
+        <mat-form-field>
+            <mat-label>Sujet:</mat-label>
+            <input matInput formControlName="subject">
+            <mat-error>
+                Le sujet est obligatoire.
+              </mat-error>
+        </mat-form-field>
+        <mat-divider></mat-divider>
+
+        <mat-form-field>
+            <mat-label>Question:</mat-label>
+            <textarea matInput formControlName="question"></textarea>
+            <mat-error>
+                La question est obligatoire.
+              </mat-error>
+        </mat-form-field>
+        <mat-divider></mat-divider>
+
+        <mat-form-field>
+            <mat-label>Première astuce:</mat-label>
+            <textarea matInput formControlName="firstHint"></textarea>
+            <mat-error>
+                La première est obligatoire.
+              </mat-error>
+        </mat-form-field>
+        <mat-divider></mat-divider>
+
+        wish a second hint ?
+
+        <mat-form-field>
+            <mat-label>Deuxième astuce:</mat-label>
+            <textarea matInput formControlName="secondHint"></textarea>
+        </mat-form-field>
+        <mat-divider></mat-divider>
+        
+        <mat-form-field>
+            <mat-label>Correction:</mat-label>
+            <input matInput formControlName="correction">
+        </mat-form-field>
+        <mat-divider></mat-divider>
+
+        <mat-form-field>
+            <mat-label>Explication:</mat-label>
+            <input matInput formControlName="explanation">
+        </mat-form-field>
+        <mat-divider></mat-divider>
+
+        <div style="text-align:center">
+            <mat-card style="margin: 10px;">
+                <mat-card-content *ngFor="let file of files">
+
+
+                    <mat-progress-bar [value]="file.progress" [color]="progressColor"></mat-progress-bar>
+                    <!-- <span id="file-label">
+                      </span> -->
+
+                </mat-card-content>
+                <mat-card-actions style="margin:auto">
+
+                    <button mat-button type="button" color="primary" (click)="onUploadClick()"
+                        [disabled]="!progressUploaded">
+                        <mat-icon>{{LoadButton}}</mat-icon>
+                        <span *ngIf="progressUploaded">Charger le document</span>
+                        <span *ngIf="!progressUploaded"> {{FileDataName}}</span>
+                    </button>
+                </mat-card-actions>
+            </mat-card>
+            <input type="file"  #fileUpload id="fileUpload" name="fileUpload"
+                style="display:none;" />
+        </div>
+        <div style="text-align: center;">
+            <button mat-dialog-close mat-raised-button color="accent" style="margin:12px">Annuler</button>
+
+            <button mat-raised-button type="submit" color="primary" style="margin:12px"
+                [disabled]="form.invalid">Valider</button>
+
+        </div>
+
+
+    </form>
+</mat-dialog-content>
