--- a/src/app/Modules/professor/Components/works/create-work/create-work.component.html
+++ b/src/app/Modules/professor/Components/works/create-work/create-work.component.html
@@ -1,5 +1,21 @@
 <H2 mat-dialog-title>Créer une question</H2>
 <mat-dialog-content>
+    <mat-slide-toggle
+    [color]="slideColor"
+    [checked]="slideCheck"
+    [(ngModel)]="slideCheck"
+    >
+        <label style="color:gray; font-size:10px;">Voulez-vous ajouter une deuxième astuce ?</label>
+    </mat-slide-toggle>
+    <br/>
+
+    <mat-slide-toggle
+    [color]="slideColor"
+    [checked]="slideCheckDocument"
+    [(ngModel)]="slideCheckDocument"
+    >
+        <label style="color:gray; font-size:10px;">Voulez-vous charger un document ?</label>
+    </mat-slide-toggle>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form">
         <mat-error *ngIf="error == true">
@@ -61,22 +77,35 @@
         </mat-form-field>
         <mat-divider></mat-divider>
 
-        <mat-form-field>
-            <mat-label>Première astuce:</mat-label>
+        <mat-form-field *ngIf="slideCheck == false">
+            <mat-label >Astuce:</mat-label>
             <textarea matInput formControlName="firstHint"></textarea>
             <mat-error>
-                La première est obligatoire.
+                Au minimum une astuce est obligatoire.
               </mat-error>
+
+        </mat-form-field>
+        <mat-form-field *ngIf="slideCheck == true">
+            <mat-label >Première astuce:</mat-label>
+            <textarea matInput formControlName="firstHint"></textarea>
+            <mat-error>
+                La première astuce est obligatoire.
+              </mat-error>
+
         </mat-form-field>
         <mat-divider></mat-divider>
+ 
 
-        wish a second hint ?
+        
 
-        <mat-form-field>
+        <mat-form-field *ngIf="slideCheck == true">
             <mat-label>Deuxième astuce:</mat-label>
             <textarea matInput formControlName="secondHint"></textarea>
+            <mat-error>
+                La deuxième astuce est obligatoire.
+              </mat-error>
         </mat-form-field>
-        <mat-divider></mat-divider>
+        <mat-divider *ngIf="slideCheck == true"></mat-divider>
         
         <mat-form-field>
             <mat-label>Correction:</mat-label>
@@ -90,7 +119,7 @@
         </mat-form-field>
         <mat-divider></mat-divider>
 
-        <div style="text-align:center">
+        <div style="text-align:center" *ngIf="slideCheckDocument == true">
             <mat-card style="margin: 10px;">
                 <mat-card-content *ngFor="let file of files">
 
