--- a/src/app/Modules/professor/Components/works/work-list/work-list.component.scss
+++ b/src/app/Modules/professor/Components/works/work-list/work-list.component.scss
@@ -2,3 +2,21 @@
     opacity: 0.75;
     font-size: 0.75em;
   }
+
+  .blink-1 {
+    -webkit-animation: blink-1 2s 2 both;
+            animation: blink-1 2s 2 both;
+            font-weight: bolder;
+  }
+  
+  @keyframes blink-1 {
+      0%,
+      50%,
+      100% {
+        opacity: 1;
+      }
+      25%,
+      75% {
+        opacity: 0;
+      }
+    }
