--- a/src/app/Modules/school/Components/school-rules/school-rules.component.html
+++ b/src/app/Modules/school/Components/school-rules/school-rules.component.html
@@ -1,4 +1,9 @@
-<mat-card>
+<button [style]="showRules == true ? '':'margin: 150px'" mat-icon-button [color]="showRules == true ?'primary':''" (click)="invertShowRules()">    
+    <mat-icon>construction</mat-icon>
+    This is still under construction (but the content is actually hidden, you can click on me to check it :-))
+</button>
+<mat-card *ngIf="showRules == true">
+
     <mat-card-header>
         <mat-card-title>
             <p>Règles de l'école</p>
@@ -6,8 +11,9 @@
 
     </mat-card-header>
     <mat-card-content>
-        <div *ngFor="let rule of rules">
-            <mat-accordion>
+
+        <div *ngFor="let rule of rules" >
+            <mat-accordion >
                 <mat-expansion-panel>
                     <mat-expansion-panel-header>
                         <mat-panel-title>
